# templates

./: README.md  flake.nix
haskell/: flake.nix  myPackage.cabal  package.nix  shell.nix
rust/: .gitignore  Cargo.toml  flake.nix
